Налажена работа клиента. Готовимся к осмысленному подключению socket io

--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-1. Нужны ли нам оба токена от auth/refresh ???
-2. Сделать клиент
-3. Подключить socket io для уведомлений
+1. Обьединить функции запроса получения меня и пользователя
+2. Настроить socket io
