Испрвление всех косяков. Подключение Socket.io

--- a/TODO
+++ b/TODO
@@ -1,2 +1,7 @@
-1. Обьединить функции запроса получения меня и пользователя
-2. Настроить socket io
+# TODO:
+1. 
+2. 
+
+# Идеи:
+1. Добавить для друзей интеграцию с чатами ( chat_id )
+2. Добавить типы дружбы
